# aiobiketrax

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: lint.yml
aiobiketrax/: __init__.py  api.py  cli.py  client.py  consts.py  exceptions.py  models.py
contrib/generator/: package-lock.json  package.json  schema.json
contrib/mock/: server.py
contrib/responses/: session.json  socket.json  subscription.json
contrib/schemas/: device.json  position.json  trip.json
tests/: test_aiobiketrax.py
